--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tugas Akhir Ubiquitous Computing",
   "main": "app.js",
   "dependencies": {
-"body-parser": "^1.15.2",
+    "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
@@ -12,8 +12,9 @@
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "nodemon": "^1.10.2",
+    "redis": "^2.6.3",
     "request": "^2.75.0"
-},
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
