--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Tugas Akhir Ubiquitous Computing",
   "main": "app.js",
+  "start": "node app.js",
   "dependencies": {
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
@@ -16,7 +17,8 @@
     "request": "^2.75.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
